--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -5,7 +5,6 @@ services:
       working_dir: /home/gatsby-app
       build:
         context: ./gatsby-app
-        dockerfile: Dockerfile
       links:
         - wordpress
       depends_on:
@@ -34,8 +33,7 @@ services:
   wordpress:
     working_dir: /var/www/html
     build:
-      context: ./wordpress-cms
-      dockerfile: Dockerfile
+      context: ./wordpress_cms
     restart: always
     ports:
       - "8080:80"
