--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -46,5 +46,5 @@ services:
       WORDPRESS_DB_NAME: wordpress
       WORDPRESS_INTERNAL_URL: http://wordpress
     volumes:
-      - ./wordpress/engine:/var/www/html
-      - ./wordpress/uploads.ini:/usr/local/etc/php/conf.d/uploads.ini
+      - ./wordpress_cms/engine:/var/www/html
+      - ./wordpress_cms/uploads.ini:/usr/local/etc/php/conf.d/uploads.ini
